--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
     "vuelidate": "^0.7.4"
   },
   "devDependencies": {
